Move final data stores to db and drop group v1 support
Fixes #89
Fixes #224

Will migrate all remaining data out of legacy JSON file and delete the file. Note that avatars and attachments are still stored on disk,
but they are not required for signald to continue working.